<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainText"
            android:textSize="30sp"
            android:layout_marginTop="200dp"
            android:textAlignment="center"
            android:text="@string/verify_email_caps"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verify_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:startIconDrawable="@drawable/ic_verify">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="number"
                android:imeOptions="actionGo"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/enter_the_verification_code"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_send_verification_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verification_email"
            android:textColorHint="@color/mainText"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/btn_sign_out"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_margin="16dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:layout_weight="1"
            android:text="@string/sign_out" />
    <Button
        android:id="@+id/btn_email_verify"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:layout_weight="1"
        android:text="@string/verify"/>
    </LinearLayout>
</RelativeLayout>