<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/MainTheme"
    tools:context=".AddDiaryActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ActionbarTheme"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:titleTextColor="@color/colorWhite"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconTintMode="multiply">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/add_title"
            android:imeOptions="actionNext"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:inputType="textCapSentences|text"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:padding="10dp"
            android:maxLines="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:imeOptions="actionNext"
            android:layout_margin="10dp"
            android:inputType="textCapSentences|text"
            android:hint="@string/add_date">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:layout_margin="10dp"
            android:inputType="textMultiLine|text"
            android:hint="@string/your_experience_today"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>